--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The basic REST API based URL shortener service.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/BohdanPetryshyn/url-dryer/issues"
   },
-  "homepage": "https://github.com/BohdanPetryshyn/url-dryer#readme"
+  "homepage": "https://github.com/BohdanPetryshyn/url-dryer#readme",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
+  }
 }
