--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ioredis": "^4.16.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
