--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ioredis": "^4.16.0"
+    "ioredis": "^4.16.0",
+    "lodash": "^4.17.15"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
