--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ioredis": "^4.16.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
