--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "start": "ENV=PROD node index"
   },
   "repository": {
     "type": "git",
@@ -14,7 +15,6 @@
   "keywords": [
     "url",
     "shortener",
-    "mongo",
     "express",
     "node"
   ],
