--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,26 @@
 version: '3'
 
 services:
+  nginx:
+    image: nginx
+    container_name: url-dryer-nginx
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - app-network
+    depends_on:
+      - url-dryer
+
   url-dryer:
     build: .
-    container_name: url-dryer
     restart: unless-stopped
     environment:
       - REDIS_HOST=redis
-    ports:
-      - "8080:8080"
+      - PORT=3000
+    expose:
+      - "3000"
     networks:
       - app-network
     depends_on:
